added firebase authentication
