# public/docs/openapi.yaml
@@ -40,15 +40,15 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: yhowe@example.net
+                  example: toy.keaton@example.org
                 password:
                   type: string
                   description: ''
-                  example: nostrum
+                  example: quis
                 device_id:
                   type: string
                   description: ''
-                  example: molestias
+                  example: sapiente
               required:
                 - email
                 - password
@@ -87,23 +87,23 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: alias
+                  example: repellat
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: koepp.adonis@example.net
+                  example: bernita66@example.org
                 phone:
                   type: string
                   description: ''
-                  example: qui
+                  example: quia
                 password:
                   type: string
                   description: ''
-                  example: ut
+                  example: sint
                 device_id:
                   type: string
                   description: ''
-                  example: magni
+                  example: qui
                 image:
                   type: string
                   format: binary
@@ -218,47 +218,47 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: perferendis
+                  example: atque
                 category_id:
                   type: integer
                   description: ''
-                  example: 20
+                  example: 5
                 sub_category_id:
                   type: integer
                   description: ''
-                  example: 20
+                  example: 18
                 description:
                   type: string
                   description: 'Must not be greater than 5000 characters.'
-                  example: 'Quis voluptas aut velit dolorem dolores sed.'
+                  example: 'Impedit sequi maxime illum praesentium quisquam et.'
                 latitude:
                   type: string
                   description: ''
-                  example: aliquid
+                  example: doloremque
                 longitude:
                   type: string
                   description: ''
-                  example: facilis
+                  example: odio
                 type:
                   type: string
                   description: 'Must be one of <code>fixed</code> or <code>hourly</code>.'
-                  example: hourly
+                  example: fixed
                 price:
                   type: number
                   description: ''
-                  example: 222634997.25621
+                  example: 69009073.474145
                 discount:
                   type: number
                   description: ''
-                  example: 115271.17916925
+                  example: 5359.46
                 hours:
                   type: integer
                   description: 'This field is required when <code>minutes</code> is not present.'
-                  example: 16
+                  example: 8
                 minutes:
                   type: integer
                   description: 'This field is required when <code>hours</code> is not present.'
-                  example: 3
+                  example: 20
                 images:
                   type: array
                   description: 'Must be an image. Must not be greater than 1024 kilobytes.'
@@ -269,7 +269,7 @@ paths:
                   type: array
                   description: ''
                   example:
-                    - quibusdam
+                    - quae
                   items:
                     type: integer
               required:
@@ -344,15 +344,15 @@ paths:
                 day:
                   type: string
                   description: ''
-                  example: eaque
+                  example: est
                 start_time:
                   type: string
                   description: ''
-                  example: quos
+                  example: voluptatem
                 end_time:
                   type: string
                   description: ''
-                  example: non
+                  example: dicta
               required:
                 - day
                 - start_time
@@ -385,14 +385,56 @@ paths:
         in: path
         name: slot
         description: 'The slot.'
-        example: quis
+        example: consectetur
         required: true
         schema:
           type: string
   /api/user/login:
     post:
-      summary: ''
-      operationId: postApiUserLogin
+      summary: 'Login (Firebase based)'
+      operationId: loginFirebaseBased
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - 'User Auth'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                token:
+                  type: string
+                  description: ''
+                  example: sit
+                device_id:
+                  type: string
+                  description: 'Must be 36 characters.'
+                  example: vrqzkyrfdcphmpojboqhmmojtorsnifqzczr
+              required:
+                - token
+                - device_id
+      security: []
+  /api/user/old-login:
+    post:
+      summary: 'Old Login (will be removed)'
+      operationId: oldLoginwillBeRemoved
       description: ''
       parameters:
         -
@@ -422,15 +464,15 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: weimann.aletha@example.org
+                  example: collins.juanita@example.com
                 password:
                   type: string
                   description: ''
-                  example: id
+                  example: sint
                 device_id:
                   type: string
                   description: ''
-                  example: sequi
+                  example: eos
               required:
                 - email
                 - password
@@ -438,8 +480,8 @@ paths:
       security: []
   /api/user/register:
     post:
-      summary: ''
-      operationId: postApiUserRegister
+      summary: 'Register (will be removed)'
+      operationId: registerwillBeRemoved
       description: ''
       parameters:
         -
@@ -469,23 +511,23 @@ paths:
                 name:
                   type: string
                   description: ''
-                  example: vitae
+                  example: rem
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: elvis.sipes@example.org
+                  example: davion16@example.org
                 phone:
                   type: string
                   description: ''
-                  example: necessitatibus
+                  example: veritatis
                 password:
                   type: string
                   description: ''
-                  example: omnis
+                  example: sit
                 device_id:
                   type: string
                   description: ''
-                  example: alias
+                  example: illum
               required:
                 - name
                 - email
